@@ -30,5 +30,6 @@ ESExpResult *func_application_name(ESExp *f, int argc, ESExpResult **argv, Conte
 ESExpResult *func_window_role(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_window_class(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_window_property(ESExp *f, int argc, ESExpResult **argv, Context *c);
+ESExpResult *func_window_workspace(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
 #endif /* _MATCHERS_H */
