@@ -228,6 +228,43 @@ my_wnck_get_cardinal_list (Window   xwindow,
   return TRUE;
 }
 
+glong
+my_wnck_get_cardinal (Window   xwindow,
+											Atom     atom)
+{
+  Atom type;
+  int format;
+  gulong nitems;
+  gulong bytes_after;
+  gulong *nums;
+  glong data;
+  int err, result;
+  
+  my_wnck_error_trap_push ();
+  type = None;
+  result = XGetWindowProperty (gdk_display,
+                              xwindow,
+                              atom,
+                              0, G_MAXLONG,
+                              False, XA_CARDINAL, &type, &format, &nitems,
+                              &bytes_after, (void*)&nums);  
+  err = my_wnck_error_trap_pop ();
+  if (err != Success ||
+      result != Success)
+    return -1;
+  
+  if (type != XA_CARDINAL)
+    {
+      XFree (nums);
+      return -1;
+    }
+
+	 data = nums[0];  
+  XFree (nums);
+
+  return data;
+}
+
 int
 my_wnck_get_viewport_start (WnckWindow *win)
 {
