@@ -44,6 +44,8 @@ Screen* my_wnck_window_get_xscreen (WnckWindow *window);
 gboolean my_wnck_get_cardinal_list (Window xwindow, Atom atom,
                                    gulong **cardinals, int *len);
 
+glong my_wnck_get_cardinal (Window xwindow, Atom atom);
+
 int my_wnck_get_viewport_start (WnckWindow *win);
 
 #if ! HAVE_SET_WINDOW_TYPE
